--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 
 			<div>
 
-				<a href="about.html"><img src="images/personalpic3.jpg" alt=""></a>
+				<img src="images/personalpic3.jpg" alt="Me yesterday" width="782" height="1196">
 <br></br>
 				<strong>
 					I am Krajna Alcantara (pronounced "cray-ee-na"), a Digital Media Artist currently attending San Jose State University.
