--- a/about.html
+++ b/about.html
@@ -29,11 +29,19 @@
 <br></br>
 <br></br>
 	<div id="body">
-
-			<div>
-
-					<a href=""><img src="images/personalpic3.jpg" alt=""></a>
+				<div class="img__wrap">
+					<img class="img__img" src="images/personalpic3.jpg" alt="image" height="1000" width="750"/>
+					<div class="img__description_layer">
+						<p class="img__description">Title: "<em>Ethereal</em>".
+				<br></br>
+				(Made: May 2001)
+				<br></br>
+					Programs: <em>Family Planning</em>
+						</p>
+				</div>
+				</div>
 <br></br>
+<p>
 				<strong>
 					I am Krajna Alcantara (pronounced "cray-ee-na"), a Digital Media Artist currently attending San Jose State University.
 					 I'm a Filipino immigrant born in a rural city Batangas, Philippines and immigrated with my family in Daly City.
@@ -63,7 +71,7 @@
 							 cool and entertaining art that inspires people to be more experimental.
 							 Overall, DMA is a fun and interesting major with so many interesting classes I want to learn about.
 </strong>
-
+</p>
 
 
 			</div>
